--- a/package.json
+++ b/package.json
@@ -79,16 +79,16 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "10.4.16",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "glob": "^13.0.0",
     "globals": "^16.5.0",
-    "postcss": "^8.4.31",
+    "postcss": "8.4.31",
     "stylelint": "^16.26.1",
     "stylelint-config-standard": "^39.0.1",
-    "tailwind-merge": "^3.4.0",
+    "tailwind-merge": "3.4.0",
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.9.3",
